[package]
name = "changes-stream2"
description = "couchdb follower"
version = "0.2.1"
authors = [
    "Ashley Williams <ashley666ashley@gmail.com>",
    "René Rössler <rene@freshx.de>",
]
license = "MIT"
edition = "2018"

[dependencies]
tokio = "1.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
bytes = "1.0"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.3", features = ["macros", "rt-multi-thread"] }
