[package]
name = "changes-stream2"
description = "couchdb follower"
version = "0.2.2"
authors = [
    "Ashley Williams <ashley666ashley@gmail.com>",
    "René Rössler <rene@freshx.de>",
]
repository = "https://github.com/elwerene/changes-stream-rust.git"
license = "MIT"
edition = "2018"

[dependencies]
tokio = "1.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["stream"] }
futures-util = "0.3"
bytes = "1.0"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.3", features = ["macros", "rt-multi-thread"] }

[features]

default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
